--- a/src/main/resources/com/example/tictactoe/hello-view.fxml
+++ b/src/main/resources/com/example/tictactoe/hello-view.fxml
@@ -7,135 +7,61 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane layoutX="39.0" layoutY="50.0" prefHeight="400.0" prefWidth="400.0">
+      <GridPane fx:id="grid" layoutX="39.0" layoutY="50.0" prefHeight="400.0" prefWidth="400.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /> <!--minWidth="10.0" prefWidth="100.0" /> -->
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="110.0" minHeight="10.0" prefHeight="110.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="110.0" minHeight="10.0" prefHeight="90.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--maxHeight="110.0" minHeight="10.0" prefHeight="110.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--maxHeight="110.0" minHeight="10.0" prefHeight="90.0" vgrow="SOMETIMES" />-->
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
         </rowConstraints>
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" textAlignment="CENTER">
                <font>
                   <Font name="Arial Narrow" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="1">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" textAlignment="CENTER"
+                    GridPane.columnIndex="1">
                <font>
                   <Font name="Arial Narrow" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="2">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" textAlignment="CENTER"
+                    GridPane.columnIndex="2">
                <font>
                   <Font name="Arial Narrow" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="3">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" textAlignment="CENTER"
+                    GridPane.columnIndex="3">
+                 <font>
+                     <Font name="Arial Narrow" size="14.0" />
+                 </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="4">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="5">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="6">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="7">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="8">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="9">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="4" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="5" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="6" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="7" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="8" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="23.0" prefWidth="40.0" text="X" textAlignment="CENTER" GridPane.columnIndex="9" GridPane.rowIndex="1">
-               <font>
-                  <Font name="Arial Narrow" size="14.0" />
-               </font>
-            </Button>
+
+
+
+
          </children>
       </GridPane>
    </children>
