--- a/src/main/resources/com/example/tictactoe/hello-view.fxml
+++ b/src/main/resources/com/example/tictactoe/hello-view.fxml
@@ -5,32 +5,34 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.HelloController">
+<AnchorPane fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.HelloController">
    <children>
-      <GridPane fx:id="grid" layoutX="39.0" layoutY="50.0" prefHeight="400.0" prefWidth="400.0">
+      <GridPane fx:id="grid" layoutX="30.0" layoutY="50.0" prefHeight="600.0" prefWidth="600.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /> <!--minWidth="10.0" prefWidth="100.0" /> -->
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" /><!--minWidth="10.0" prefWidth="100.0" />-->
+            <ColumnConstraints hgrow="SOMETIMES"  /> <!--percentWidth="10" /> prefWidth="100.0" minWidth="20.0"/>-->
+            <!--
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />>
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
+            <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />-->
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--maxHeight="110.0" minHeight="10.0" prefHeight="110.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--maxHeight="110.0" minHeight="10.0" prefHeight="90.0" vgrow="SOMETIMES" />-->
-            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />-->
+            <RowConstraints vgrow="SOMETIMES" /><!--minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" percentHeight="10" minHeight="20.0"/>-->
+            <!--
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" />
+            <RowConstraints percentHeight="10" vgrow="SOMETIMES" /> -->
         </rowConstraints>
       </GridPane>
    </children>
