--- a/src/main/resources/com/example/tictactoe/hello-view.fxml
+++ b/src/main/resources/com/example/tictactoe/hello-view.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -7,9 +9,9 @@
 
 <AnchorPane fx:id="mainWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.tictactoe.HelloController">
    <children>
-      <GridPane fx:id="grid" layoutX="30.0" layoutY="50.0" prefHeight="600.0" prefWidth="600.0">
+      <GridPane fx:id="grid" layoutX="30.0" layoutY="25.0" prefHeight="750.0" prefWidth="750.0">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES"  /> <!--percentWidth="10" /> prefWidth="100.0" minWidth="20.0"/>-->
+            <ColumnConstraints hgrow="SOMETIMES" /> <!--percentWidth="10" /> prefWidth="100.0" minWidth="20.0"/>-->
             <!--
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />
             <ColumnConstraints hgrow="SOMETIMES" percentWidth="10" />>
@@ -35,5 +37,7 @@
             <RowConstraints percentHeight="10" vgrow="SOMETIMES" /> -->
         </rowConstraints>
       </GridPane>
+      <Button fx:id="button" layoutX="820.0" layoutY="138.0" mnemonicParsing="false" onAction="#newGame" text="Новая игра" />
+      <Label fx:id="label" layoutX="820.0" layoutY="69.0" text="Компьютер первый" />
    </children>
 </AnchorPane>
